[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/Enemies.png" type="Texture" id=1]
[ext_resource path="res://Art/Ram.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Ram.gd" type="Script" id=3]
[ext_resource path="res://Art/Player_Light_Radius.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 8.18925

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.07299, 2.04259 )

[sub_resource type="CircleShape2D" id=3]
radius = 200.0

[node name="Enemy" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Ram" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Ram"]
position = Vector2( 0, -12 )
scale = Vector2( 0.75, 0.5 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Ram"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ram/Area2D"]
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="Sightrange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sightrange"]
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
mode = 1
range_z_max = 0

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="body_entered" from="Ram/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Sightrange" to="." method="_on_Sightrange_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
